# api-contract-guardian

./: .gitattributes  .gitignore  .pypirc  .secrets.baseline  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  contributors.txt  package-lock.json  package.json  publish.sh  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  npm-publish.yml  pages.yml  publish.yml
src/api_contract_guardian/: __init__.py  __main__.py  cli.py  diff.py  gate.py  loader.py  migration.py
src/api_contract_guardian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_diff.py  test_edge_cases.py  test_gate.py  test_loader.py  test_migration.py
tests/fixtures/: spec-v1.yaml  spec-v2.yaml
